# sigfx

inc/demos/common/animations/shader/: shader-demo.h
inc/demos/common/core/: demo-utils.h
inc/demos/glfw/: glfw-demo-player.h
inc/gfx/core/: primitive-2D.h  shader-2D.h
inc/gfx/core/types/: color4.h  obb-2D.h
inc/gfx/debug/: debug-viewer.h
inc/gfx/geometry/: rasterize.h
inc/gfx/math/: vec3.h
inc/gfx/primitives/: bitmap-2D.h  circle-2D.h  ellipse-2D.h  polygon-2D.h  polyline-2D.h
inc/gfx/shaders/: test-shader.h
inc/gfx/surfaces/glfw/: glfw-render-surface.h
inc/gfx/text/: font-ttf.h
src/demos/common/animations/: CMakeLists.txt
src/demos/common/animations/shader/: CMakeLists.txt  shader-demo.cpp
src/demos/common/animations/text/: text-demo.cpp
src/demos/common/core/: demo-player.cpp
src/demos/common/interactive/: interactive-demo.cpp
src/gfx/core/: primitive-2D.cpp  render-2D.cpp
src/gfx/debug/: debug-viewer.cpp
src/gfx/geometry/: rasterize.cpp
src/gfx/primitives/: text-2D.cpp
src/gfx/surfaces/curses/: curses-render-surface.cpp
src/gfx/surfaces/glfw/: glfw-render-surface.cpp
src/gfx/text/: font-manager-ttf.cpp
